--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,62 +1,55 @@
-name: test golibs
+'name': 'test golibs'
 
-on: push
+'on': 'push'
 
-jobs:
-  tests:
-    runs-on: ${{ matrix.os }}
-    env:
-      GO111MODULE: "on"
-    strategy:
-      matrix:
-        os:
-          - windows-latest
-          - macos-latest
-          - ubuntu-latest
+'jobs':
+  'tests':
+    'runs-on': '${{ matrix.os }}'
+    'strategy':
+      'matrix':
+        'os':
+        - 'windows-latest'
+        - 'macos-latest'
+        - 'ubuntu-latest'
+    'steps':
+    - 'uses': 'actions/checkout@master'
+    - 'uses': 'actions/setup-go@v2'
+      'with':
+        'go-version': '1.17.x'
+    - 'name': 'tests'
+      'run': 'make test'
+    - 'name': 'coverage'
+      'uses': 'codecov/codecov-action@v1'
+      'if':
+        success() && matrix.os == 'ubuntu-latest'
+      'with':
+        'token': '${{ secrets.CODECOV_TOKEN }}'
+        'file': './coverage.txt'
 
-    steps:
-      - uses: actions/checkout@master
-
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.14.x
-
-      - name: tests
-        run: |-
-          go test -race -v -bench="." -coverprofile="coverage.txt" -covermode=atomic ./...
-
-      - name: Upload coverage
-        uses: codecov/codecov-action@v1
-        if: "success() && matrix.os == 'ubuntu-latest'"
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.txt
-
-  notify:
-    needs:
-      - tests
+  'notify':
+    'needs':
+    - 'tests'
     # Secrets are not passed to workflows that are triggered by a pull request
     # from a fork.
     #
     # Use always() to signal to the runner that this job must run even if the
     # previous ones failed.
-    if:
+    'if':
       ${{ always() &&
         (
           github.event_name == 'push' ||
           github.event.pull_request.head.repo.full_name == github.repository
         )
       }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Conclusion
-        uses: technote-space/workflow-conclusion-action@v1
-
-      - name: Send Slack notif
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ env.WORKFLOW_CONCLUSION }}
-          fields: workflow, repo, message, commit, author, eventName, ref
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+    'runs-on': 'ubuntu-latest'
+    'steps':
+    - 'name': 'Conclusion'
+      'uses': 'technote-space/workflow-conclusion-action@v1'
+    - 'name': 'Send Slack notification'
+      'uses': '8398a7/action-slack@v3'
+      'with':
+        'status': '${{ env.WORKFLOW_CONCLUSION }}'
+        'fields': 'workflow, repo, message, commit, author, eventName, ref'
+      'env':
+        'GITHUB_TOKEN': '${{ secrets.GITHUB_TOKEN }}'
+        'SLACK_WEBHOOK_URL': '${{ secrets.SLACK_WEBHOOK_URL }}'
