Pull request 79: Makefile
Merge in GO/golibs from makefile to master

Squashed commit of the following:

commit d0cc86b65a84906030cb97da3e265bfeaf127596
Author: Eugene Burkov <E.Burkov@AdGuard.COM>
Date:   Wed Jul 26 18:06:06 2023 +0300

    all: imp code

commit 69d65e8a4c182160c68ac9b42b6e08282570daa7
Author: Eugene Burkov <E.Burkov@AdGuard.COM>
Date:   Wed Jul 26 17:30:20 2023 +0300

    specs: rm fuzz for now

commit 83b74ff3f1312eaea1c0dcb943aba89d409e4290
Author: Eugene Burkov <E.Burkov@AdGuard.COM>
Date:   Wed Jul 26 17:24:16 2023 +0300

    all: add makefile

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 # Only build, run, and test outputs here.  Sorted.  With negations at the
 # bottom to make sure they take effect.
 coverage.txt
+*.test
+/bin/
