--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -30,7 +30,7 @@
               - |
                 set -e -f -u -x
 
-                make VERBOSE=1 go-deps go-test
+                make VERBOSE=1 go-deps go-test go-fuzz
     'final-tasks':
       - 'clean'
     'requirements':
