Pull request 98: upd-all
Squashed commit of the following:

commit 1841e8ed99da1e68c1994e4d2177ce2746f0ddae
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Feb 7 15:48:41 2024 +0300

    all: upd deps, go, tools

--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -5,7 +5,11 @@
     'key': 'LIBS'
     'name': 'golibs'
 'variables':
-    'dockerGo': 'adguard/golang-ubuntu:7.6'
+    # When there is a patch release of Go available, set this property to an
+    # exact patch version as opposed to a minor one to make sure that this exact
+    # version is actually used and not whatever the docker daemon on the CI has
+    # cached a few months ago.
+    'dockerGo': 'golang:1.21.7'
 
 'stages':
   - 'Test':
@@ -52,5 +56,6 @@
             'url': 'http://prod.jirahub.service.eu.consul/v1/webhook/bamboo'
 
 'labels': []
+
 'other':
     'concurrent-build-plugin': 'system-default'
