Pull request 111: add-httputil
Squashed commit of the following:

commit 7a599bad918a5f83b1cba6aba721762823f88318
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Mon Jul 15 18:51:37 2024 +0300

    httputil: imp tests

commit 48488b0dfeae6d17ca1886481e19b83edbe11964
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Mon Jul 15 16:28:23 2024 +0300

    httputil: imp healthcheck

commit 368f27ca59b208ceb384ec75bf6f327ca6611433
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Mon Jul 15 16:14:39 2024 +0300

    all: mv pprofutil to httputil; imp code

commit 295566e0c78c33e43cfc5f69a8d9da494f87abfb
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Thu Jul 11 20:05:21 2024 +0300

    all: upd, add netutil/httputil

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@
 #
 # Only build, run, and test outputs here.  Sorted.  With negations at the
 # bottom to make sure they take effect.
-coverage.txt
+*.out
 *.test
 /bin/
