Pull request 122: upd-all
Squashed commit of the following:

commit c5ebb6abfc316d6c30e8f94c86b9724e9d44feeb
Author: Eugene Burkov <E.Burkov@AdGuard.COM>
Date:   Thu Oct 3 19:11:54 2024 +0300

    netutil: imp docs

commit 07496268add68e808429c04917b5d1955be65a06
Author: Eugene Burkov <E.Burkov@AdGuard.COM>
Date:   Thu Oct 3 18:57:08 2024 +0300

    netutil: fix ip parsing

commit d912957643d49ca5c37370e20e55b29708d7ba90
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Thu Oct 3 18:31:37 2024 +0300

    all: imp tests

commit 355b840c7b5035729d1b6f65013ec08da2a6921c
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Thu Oct 3 18:15:56 2024 +0300

    all: upd deps, go, tools; rm mapsutil

--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -14,8 +14,7 @@
     # exact patch version as opposed to a minor one to make sure that this exact
     # version is actually used and not whatever the docker daemon on the CI has
     # cached a few months ago.
-    'dockerGo': 'golang:1.22.6'
-    'dockerMisc': 'adguard/go-misc-tools:1.0'
+    'dockerGo': 'adguard/go-builder:1.23.2--1'
 
 'stages':
   - 'Go Lint':
@@ -58,7 +57,7 @@
 
 'Misc Lint':
     'docker':
-        'image': '${bamboo.dockerMisc}'
+        'image': '${bamboo.dockerGo}'
     'key': 'MISCLINT'
     'other':
         'clean-working-dir': true
@@ -73,7 +72,7 @@
               - |
                 set -e -f -u -x
 
-                make VERBOSE=1 md-lint sh-lint
+                make VERBOSE=1 go-tools md-lint sh-lint txt-lint
 
 
 'Test':
