Pull request 124: add-set-and-url
Squashed commit of the following:

commit 8d87787bdeb5da12c7eaa74040181aec8831a263
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Fri Nov 1 12:16:54 2024 +0300

    errors: fix type

commit 986169fa4aa4a148b787c3ae140c4324f6b29915
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Thu Oct 31 19:30:53 2024 +0300

    all: add tests, imp code

commit 0393ff0e981d5a14113ce5c431d9d6fdd4664d08
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Thu Oct 31 18:45:47 2024 +0300

    all: imp docs, tests

commit ff7d161d0212cfd8330eba09cfc1fdd478176343
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Thu Oct 31 17:19:00 2024 +0300

    container: add sorted slice set; urlutil: add helpers

--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -51,6 +51,8 @@
             'interpreter': 'SHELL'
             'scripts':
               - |
+                #!/bin/sh
+
                 set -e -f -u -x
 
                 make VERBOSE=1 go-tools go-lint
@@ -70,6 +72,8 @@
             'interpreter': 'SHELL'
             'scripts':
               - |
+                #!/bin/sh
+
                 set -e -f -u -x
 
                 make VERBOSE=1 go-tools md-lint sh-lint txt-lint
@@ -89,9 +93,11 @@
             'interpreter': 'SHELL'
             'scripts':
               - |
+                #!/bin/sh
+
                 set -e -f -u -x
 
-                make VERBOSE=1 go-deps go-test go-fuzz
+                make VERBOSE=1 go-deps go-bench go-test go-fuzz
     'final-tasks':
       - 'clean'
     'requirements':
