Pull request 140: add-redisutil
Merge in GO/golibs from add-redisutil to master

Squashed commit of the following:

commit e65edc896ad8dec13bddb915628c2361c746a044
Merge: 218e903 08ab98a
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Mon Apr 14 18:28:45 2025 +0300

    Merge branch 'master' into add-redisutil

commit 218e903973ec6560ac05ad1160a39db574ae8d0b
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Mon Apr 14 18:04:42 2025 +0300

    redisutil: imp validations

commit 252e0628b917b7910b5abb1edbe74f3bffe17841
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Mon Apr 14 16:20:30 2025 +0300

    redisutil: imp docs

commit fff4b84c3f6280468a4e293466dbc022d0625581
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Mon Apr 14 12:45:24 2025 +0300

    redisutil: imp names

commit 00d1925165419f902fa27b3d251ee188e6a2a0d7
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Fri Apr 11 17:06:01 2025 +0300

    redisutil: imp tests

commit e426b79613d9c489d93576025766aa847a438468
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Fri Apr 11 15:25:36 2025 +0300

    all: imp docs, tests

commit 205b569159da68f7d1211951768ae483ee0bec3c
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Fri Apr 11 15:01:30 2025 +0300

    redisutil: add integration tests

commit a18ec10640f705d7fde21da81586d50ec45c3b2a
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Mon Apr 7 21:05:38 2025 +0300

    all: add redisutil; upd go

--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -14,7 +14,7 @@
     # exact patch version as opposed to a minor one to make sure that this exact
     # version is actually used and not whatever the docker daemon on the CI has
     # cached a few months ago.
-    'dockerGo': 'adguard/go-builder:1.24.2--1'
+    'dockerGo': 'adguard/go-builder:1.24.2--2'
 
 'stages':
   - 'Go Lint':
@@ -97,7 +97,31 @@
 
                 set -e -f -u -x
 
-                make VERBOSE=1 go-deps go-bench go-test go-fuzz
+                export TEST_REDIS_PORT=6379
+                readonly TEST_REDIS_PORT
+
+                readonly redis_server_pidfile='redis-server.pid'
+
+                redis-server \
+                    --daemonize yes \
+                    --pidfile "$redis_server_pidfile" \
+                    --port "$TEST_REDIS_PORT" \
+                    ;
+
+                make VERBOSE=1 \
+                    go-deps \
+                    go-test \
+                    ;
+
+                redis_server_pid="$(head -n 1 "$redis_server_pidfile")"
+                readonly redis_server_pid
+
+                kill "$redis_server_pid"
+
+                make VERBOSE=1 \
+                    go-fuzz \
+                    go-bench \
+                    ;
     'final-tasks':
       - 'clean'
     'requirements':
