Pull request 151: osutil-executil
Merge in GO/golibs from osutil-executil to master

Squashed commit of the following:

commit 4857d8ff2f4b47aac65b529e78c370281bce92a3
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Thu Jul 31 16:52:43 2025 +0300

    osutil/executil: rename methods

commit 0c65ec13b63dc13cb45f5c1d81d59cdbe7caf9ed
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Thu Jul 31 16:13:25 2025 +0300

    all: imp docs, tests

commit e3fc16d991e0bc2c79f98befd7de819061812e08
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Jul 30 20:42:49 2025 +0300

    bamboo-specs: upd

commit 928465595acf725379620d240d5f1aec7ebba0e2
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Jul 30 20:35:34 2025 +0300

    all: rm exe; imp gitignore; fmt

commit 504966783fd26f7cf10f7eddd95e9c8c18878eca
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Jul 30 20:24:12 2025 +0300

    osutil: add executil

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 #
 # Only build, run, and test outputs here.  Sorted.  With negations at the
 # bottom to make sure they take effect.
+*.exe
 *.out
 *.test
 /bin/
+/test-reports/
