Pull request 155: imp-tests
Merge in GO/golibs from imp-tests to master

Squashed commit of the following:

commit e86a6f80ef3c5ca5fb1dc305e8957d20b59f2377
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Thu Aug 14 15:44:13 2025 +0300

    testutil: imp test

commit cd389adb0323c05908d1f089d568350b0ec57750
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Aug 13 19:28:19 2025 +0300

    all: imp docs

commit d6ddcb80124f5b514aad736c437410f687fa322d
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Aug 13 19:00:56 2025 +0300

    fakefs: imp

commit 7ceef5eccebee29375a93fca2e605f074f31f019
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Aug 13 15:38:31 2025 +0300

    testutil: add UnexpectedCall, imp RequireTypeAssert

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # This comment is used to simplify checking local copies of the file.  Bump
 # this number every time a significant change is made to this file.
 #
-# AdGuard-Project-Version: 1
+# AdGuard-Project-Version: 3
 
 # Please, DO NOT put your text editors' temporary files here.  The more are
 # added, the harder it gets to maintain and manage projects' gitignores.  Put
@@ -16,3 +16,4 @@
 *.test
 /bin/
 /test-reports/
+/tmp/
