Pull request #156: add-syncutil-map
Merge in GO/golibs from add-syncutil-map to master

Squashed commit of the following:

commit 748ab5614c5da46870263dd836256ea2e7f7f60e
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Sep 3 17:59:02 2025 +0300

    syncutil: imp test

commit 680ae79ea0c86ab18c6a4d31c8d3e2a4a354fd9e
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Sep 3 17:24:21 2025 +0300

    all: imp docs

commit 99c33038ff67e61d474fb5cb1e1549b45b83143c
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Sep 3 17:07:08 2025 +0300

    bamboo-specs: fmt

commit 4a73ab02433055005428f9829c3832a9dce8e685
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Sep 3 17:00:19 2025 +0300

    syncutil: add Map

--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -75,7 +75,13 @@
 
                 set -e -f -u -x
 
-                make VERBOSE=1 go-tools md-lint sh-lint txt-lint
+                make \
+                    VERBOSE=1 \
+                    go-tools \
+                    md-lint \
+                    sh-lint \
+                    txt-lint \
+                    ;
 
 'Test':
     'docker':
