Pull request #157: upd-all
Merge in GO/golibs from upd-all to master

Squashed commit of the following:

commit 6320b7828b53140fabfe9064bf2d0c28202c295f
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Thu Sep 4 17:45:29 2025 +0300

    all: upd deps, go, scripts

--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -13,7 +13,7 @@
     # exact patch version as opposed to a minor one to make sure that this exact
     # version is actually used and not whatever the docker daemon on the CI has
     # cached a few months ago.
-    'dockerGo': 'adguard/go-builder:1.24.6--1'
+    'dockerGo': 'adguard/go-builder:1.25.1--1'
 
 'stages':
   - 'Go Lint':
@@ -54,7 +54,11 @@
 
                 set -e -f -u -x
 
-                make VERBOSE=1 go-tools go-lint
+                make \
+                    VERBOSE=1 \
+                    go-tools \
+                    go-lint \
+                    ;
 
 'Misc Lint':
     'docker':
