--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -9,90 +9,19 @@
     'key': 'LIBS'
     'name': 'golibs'
 'variables':
-    # When there is a patch release of Go available, set this property to an
-    # exact patch version as opposed to a minor one to make sure that this exact
-    # version is actually used and not whatever the docker daemon on the CI has
-    # cached a few months ago.
+    # This variable is used to override Docker caching, for example to rerun a
+    # flaky test suite.
+    'cacheBuster': '0'
     'dockerGo': 'adguard/go-builder:1.25.5--1'
 
 'stages':
-  - 'Go Lint':
-        'manual': false
-        'final': false
-        'jobs':
-          - 'Go Lint'
-  - 'Misc Lint':
-        'manual': false
-        'final': false
-        'jobs':
-          - 'Misc Lint'
   - 'Test':
         'manual': false
         'final': false
         'jobs':
           - 'Test'
 
-'Go Lint':
-    'docker':
-        'image': '${bamboo.dockerGo}'
-        'volumes':
-            '${system.GO_CACHE_DIR}': '${bamboo.cacheGo}'
-            '${system.GO_PKG_CACHE_DIR}': '${bamboo.cacheGoPkg}'
-    'key': 'GOLINT'
-    'other':
-        'clean-working-dir': true
-    'requirements':
-      - 'adg-docker': true
-    'tasks':
-      - 'checkout':
-            'force-clean-build': true
-      - 'script':
-            'interpreter': 'SHELL'
-            'scripts':
-              - |
-                #!/bin/sh
-
-                set -e -f -u -x
-
-                make \
-                    VERBOSE=1 \
-                    go-tools \
-                    go-lint \
-                    ;
-
-'Misc Lint':
-    'docker':
-        'image': '${bamboo.dockerGo}'
-    'key': 'MISCLINT'
-    'other':
-        'clean-working-dir': true
-    'requirements':
-      - 'adg-docker': true
-    'tasks':
-      - 'checkout':
-            'force-clean-build': true
-      - 'script':
-            'interpreter': 'SHELL'
-            'scripts':
-              - |
-                #!/bin/sh
-
-                set -e -f -u -x
-
-                make \
-                    VERBOSE=1 \
-                    go-tools \
-                    md-lint \
-                    sh-lint \
-                    txt-lint \
-                    ;
-
 'Test':
-    'docker':
-        'image': '${bamboo.dockerGo}'
-        'volumes':
-            '${system.GO_CACHE_DIR}': '${bamboo.cacheGo}'
-            '${system.GO_PKG_CACHE_DIR}': '${bamboo.cacheGoPkg}'
     'final-tasks':
       - 'test-parser':
           # The default pattern, '**/test-reports/*.xml', works, so don't set
@@ -112,42 +41,21 @@
 
                 set -e -f -u -x
 
-                export TEST_REDIS_PORT=6379
-                readonly TEST_REDIS_PORT
+                docker info
 
-                readonly redis_server_pidfile='redis-server.pid'
-
-                redis-server \
-                    --daemonize yes \
-                    --pidfile "$redis_server_pidfile" \
-                    --port "$TEST_REDIS_PORT" \
-                    ;
-
-                make \
-                    TEST_REPORTS_DIR="./test-reports/" \
-                    VERBOSE=1 \
-                    go-tools \
-                    go-deps \
-                    go-test \
-                    ;
+                docker build \
+                    --build-arg "BASE_IMAGE=${bamboo_dockerGo}" \
+                    --build-arg "CACHE_BUSTER=${bamboo_cacheBuster}" \
+                    --output '.' \
+                    --progress 'plain' \
+                    --target 'tester-exporter' \
+                    -f ./docker/ci.docker \
+                    .
 
                 exit_code="$(cat ./test-reports/test-exit-code.txt)"
                 readonly exit_code
 
-                redis_server_pid="$(head -n 1 "$redis_server_pidfile")"
-                readonly redis_server_pid
-
-                kill "$redis_server_pid"
-
-                make \
-                    VERBOSE=1 \
-                    go-fuzz \
-                    go-bench \
-                    ;
-
                 exit "$exit_code"
-    'requirements':
-      - 'adg-docker': true
 
 'branches':
     'create': 'for-pull-request'
@@ -155,26 +63,6 @@
         'after-deleted-days': 1
         'after-inactive-days': 5
     'link-to-jira': true
-
-# Run only the linting and testing stages in any branch save for "master".
-'branch-overrides':
-  - '^((?!master).)*$':
-        'stages':
-          - 'Go Lint':
-                'manual': false
-                'final': false
-                'jobs':
-                  - 'Go Lint'
-          - 'Misc Lint':
-                'manual': false
-                'final': false
-                'jobs':
-                  - 'Misc Lint'
-          - 'Test':
-                'manual': false
-                'final': false
-                'jobs':
-                  - 'Test'
 
 'notifications':
   - 'events':
