Pull request #171: upd-and-fix
Merge in GO/golibs from upd-and-fix to master

Squashed commit of the following:

commit de2f382f30ca268588b1e9228b9d073507c8566b
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Jan 28 17:57:55 2026 +0300

    docker: upd

commit 25398a668d0a0bdf38764b97f77c168149385abc
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Jan 28 17:54:21 2026 +0300

    all: fix ci

commit 0fd4a696e2394642e574cf3f38ff78c2f33e3ae0
Author: Ainar Garipov <A.Garipov@AdGuard.COM>
Date:   Wed Jan 28 17:52:49 2026 +0300

    all: upd deps; fix docs

--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -49,7 +49,7 @@
                     --output '.' \
                     --progress 'plain' \
                     --target 'tester-exporter' \
-                    -f ./docker/ci.docker \
+                    -f ./docker/ci.Dockerfile \
                     .
 
                 exit_code="$(cat ./test-reports/test-exit-code.txt)"
